--- a/style.css
+++ b/style.css
@@ -124,3 +124,43 @@ nav .fa {
         padding: 30px;
     }
 }
+
+.amenities {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.row {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.course-col {
+    flex-basis: 30%;
+    background: lightskyblue;
+    border-radius: 10px;
+    padding: 20px 12px;
+    margin-bottom: 5%;
+    box-sizing: border-box;
+    transition: all .2s ease-in-out;
+}
+
+h3 {
+    color: white;
+    text-align: center;
+    margin: 10px 0;
+    font-weight: 600;
+}
+
+.course-col:hover {
+    /* box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2); */
+    transform: scale(1.1);
+}
