--- a/style.css
+++ b/style.css
@@ -161,6 +161,34 @@ h3 {
 }
 
 .course-col:hover {
-    /* box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2); */
     transform: scale(1.1);
+}
+
+@media(max-width: 700px) {
+    .row {
+        flex-direction: column;
+    }
+}
+
+.locations {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.locations-col {
+    /* flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden; */
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+.locations-col img {
+    width:100px;
+    height:100px;
 }
